# jig

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.claude/rules/: jig-methodology.md
.claude/workflow/: metadata.json
.github/: branch-protection.json
.github/workflows/: release.yml  test.yml
docs/: HANDOFF_0.1.0a29.md  architecture.md  cursor-assets.md  embeddings.md  init.md  proxy.md  testing.md  tools.md
docs/pipeline/: ALIGNMENT_PROJECT_FLOW.md  INTEGRATION_SMOKE.md  OUTPUT_CONTRACTS.md  PHASE_ROUTING.md  SETUP_AND_TOOLKIT.md
scripts/: fresh-vm-e2e.sh
src/jig/: __init__.py  __main__.py  server.py
src/jig/assets/: settings.template.json
src/jig/assets/agents/: architect.md  backend.md  browser.md  codebase-analyst.md  debugger.md  deltacodecube.md  fixer.md  frontend.md  git-snapshots.md  mcp-developer.md  mcp.md  orchestrator.md  plugins.md  product-analyzer.md  reviewer.md  terminal.md  tester.md  workflow-executor.md  workflow.md
src/jig/assets/commands/: audit.md  build.md  setup-agents.md  sprint.md  status.md  task-with-jig.md
src/jig/assets/guides/: create-workflow.md  getting-started.md  proxy-design.md  snapshots.md  tensions.md
src/jig/assets/rules/: autonomous-strategy.md  commit-discipline.md  dev.md  devops.md  execution-philosophy.md  go.md  java.md  jig-methodology.md  jsbackend.md  lua.md  php.md  python.md  qa.md  quality-feedback.md  rust.md  security-awareness.md  serena-mcp.md  sprint-execution.md  subagent-delegation.md  swift.md  typescript.md  ui.md  ux.md  workflow-discipline.md
src/jig/assets/workflows/: debug-graph.yaml  demo-feature.yaml  framework-evolution-graph.yaml
src/jig/cli/: cursor_emit.py  doctor.py  graph_cmd.py  init_cmd.py  main.py  memory_cmd.py  memory_gc.py  migrate_cmd.py  resync_cmd.py  update_cmd.py
src/jig/contracts/: __init__.py  code_analysis.py
src/jig/core/: embed_cache.py  embeddings.py  paths.py  session.py  snapshots.py
src/jig/engines/: dcc_glue.py  dcc_integration.py  experience_memory.py  graph_engine.py  graph_parser.py  graph_state.py  hub_config.py  internal_proxy.py  memory_store.py  next_task.py  pattern_catalog.py  project_metadata.py  provider_registry.py  proxy_pool.py  tool_index.py  trend_tracker.py
src/jig/engines/dcc/: __init__.py  __main__.py  config.py  server.py
src/jig/hooks/: dcc_feedback.py  experience_injector.py  experience_recorder.py  graph_enforcer.py  jig_cursor_hook_runner.py  lsp_status_check.py  memory_injector.py  session_bootstrap.py  session_knowledge_capture.py  smart_context.py  snapshot_trigger.py  style_guard.py  user_memory_injector.py  workflow_enforcer.py  workflow_post_traverse.py
src/jig/tests/: test_auto_wiring.py  test_cursor_emit.py  test_dcc_smart_filtering.py  test_doctor_gaps.py  test_experience_checklist.py  test_graph_cmd.py  test_graph_enforcer_control.py  test_graph_features.py  test_next_task.py  test_pattern_catalog.py  test_project_metadata.py  test_security_integration.py  test_smoke.py  test_trend_tracker.py
src/jig/tools/: _graph_builder.py  _graph_core.py  _graph_management.py  _graph_split.py  _proxy_legacy.py  _tool_archive.py  config.py  deployment.py  experience.py  graph.py  graph_enforcer_control.py  guide.py  memory.py  metadata.py  next_task.py  patterns.py  proxy.py  resync.py  snapshot.py  trends.py
(+147 files in other folders)
